2004-11-25 23:00  svu
	
	* libxklavier, tests: MASSIVE commit. First version
	with somewhat working xmodmap support. Broken API

2004-11-04 19:00  svu

	* libxklavier/Makefile.am,

	* libxklavier/Makefile.am,
	libxklavier/xklavier.c,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_config_xmm.c,
	libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_private_xmm.h,
	libxklavier/xklavier_xmm.c: going xmodmappy

2004-11-04 19:00  svu

	* libxklavier/xklavier_config_i18n.c,
	tests/Makefile.am,
	tests/test_config.c,
	tests/test_monitor.c: 64-bit compatibility patch from 
	James Henstridge. -Wall -Werror for tests.


2004-11-02 22:55  svu

	* libxklavier/Makefile.am,
	  libxklavier/xklavier.c,
	  libxklavier/xklavier.h,
	  libxklavier/xklavier_config.c,
	  libxklavier/xklavier_config_i18n.c,
	  libxklavier/xklavier_config_xkb.c,
	  libxklavier/xklavier_dump.c,
	  libxklavier/xklavier_evt.c,
	  libxklavier/xklavier_evt_xkb.c,
	  libxklavier/xklavier_private.h,
	  libxklavier/xklavier_private_xkb.h,
	  libxklavier/xklavier_props.c,
	  libxklavier/xklavier_xkb.c: virtualizing everything (?) which
	  involves XKB directly. The VTable is introduced. So, now another
	  VTable (xmodmap) can be created, hopefully...
	* configure.in: preparing 1.11

2004-10-31 21:00  svu

	* libxklavier/xklavier_config_xkb.c:
	Fixing the xkbcomp command line. Ubercool!

2004-10-24 03:54  svu

	* libxklavier/xklavier_config.h, libxklavier/xklavier_evt.c,
	libxklavier/xklavier_util.c: fixing handling of the transparent 
	windows. Fixes some problems with metacity and Window List-based
	switching (reported by Alexander Ovcharenko).

2004-10-16 23:18  svu

	* NEWS: preparing 1.10

2004-10-11 23:38  svu

	* libxklavier/: xklavier_config.c, xklavier_config_xkb.c,
	  xklavier_private.h, xklavier_xkb.c: Introducing the envvar
	  XKL_DEBUG - I am sick of calling XklSetDebug manually

2004-10-10 23:38  svu
